--- a/chatbot_api/pyproject.toml
+++ b/chatbot_api/pyproject.toml
@@ -3,18 +3,15 @@ name = "chatbot_api"
 version = "0.1"
 
 dependencies = [
-    "asyncio==3.4.3",
-    "fastapi==0.110.0",
-    "langchain==0.1.16",
-    "langchain-openai==0.1.3",
+    "fastapi==0.115.0",
+    "uvicorn==0.30.0",
+    "langchain==0.3.0",
+    "langchain-community==0.3.0",
+    "langchain-openai==0.2.2",
+    "openai>=1.57.0",
     "langchainhub==0.1.15",
     "neo4j==5.14.1",
     "numpy==1.26.2",
-    "openai==1.31.0",
     "opentelemetry-api==1.22.0",
-    "pydantic==2.5.3",
-    "uvicorn==0.29.0"
+    "pydantic>=2.7,<3.0"   # 🔑 Allow FastAPI + OpenAI + LangChain to agree
 ]
-
-[project.optional-dependencies]
-dev = ["black", "flake8"]
